[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/actors/player/PlayerStats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/parents/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Player/player.png" type="Texture" id=3]
[ext_resource path="res://Scripts/player.gd" type="Script" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/hit_color = Color( 1, 1, 0, 1 )
shader_param/hit_strength = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 2 )

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=9]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_step_sound"
} ]
}

[sub_resource type="Animation" id=10]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 1, 3 )

[node name="player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 4 )

[node name="PlayerStats" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, -4 )
texture = ExtResource( 3 )
hframes = 7

[node name="bulletInitPosition" type="Position2D" parent="Sprite"]
position = Vector2( 4, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )
anims/celebrate = SubResource( 5 )
anims/damage = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/jump = SubResource( 8 )
anims/walk = SubResource( 9 )

[node name="blinkAnimator" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 10 )

[node name="AttackCoolDown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="invinsibilityTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -3 )
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 11 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AttackCoolDown" to="." method="_on_AttackCoolDown_timeout"]
[connection signal="timeout" from="invinsibilityTimer" to="." method="_on_invinsibilityTimer_timeout"]
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]

[editable path="Hurtbox"]
